- gam performance iteration (1.8-19, Sept 2017)
- argument 'pers' in plot.gam (1.8-23, Nov 2018)

1.8-23

* default plot methods added for smooths of 3 and 4 variables. 

* The `gamma' control parameter for gam and bam can now be used with RE/ML
  smoothness selection, not just GCV/AIC. Essentially smoothing parameters
  are chosen as if the sample size was n/gamma instead of n.

* coxph fix of prediction bug introduced with stratified model (thanks
  Giampiero Marra)
	
* bam(...,discrete=TRUE) fix to handle nested matrix arguments to smooths.

* bam(...,discrete=TRUE) fix to by variable handling with fs and re smooths
  which could fail during re-representation as tensor smooths (for 
  discretization purposes).

* bam was reporting wrong family under some smoothing parameter selection 
  methods (not default).

* null deviance computation improved for extended families. Previous version 
  used an approximation valid for most families, and corrected the rest - now 
  replaced with exact computations for all cases.

* paraPen handling in bam was broken - fixed.

* slight adjustment to sp  initialization for extended families - use observed 
  information in weights if possible.

1.8-22

* Fix of bug whereby testing for OpenMP and nthreads>1 in bam, would fail if 
  OpenMP was missing. 

1.8-21

* When functions were added to families within mgcv some very large 
  environments could end up attached to those functions, for no good reason.
  The problem originated from the dispatch of the generic 'fix.family.link' 
  and then propagated via fix.family.var and fix.family.ls. This is now avoided,
  resulting in smaller gam objects on disk and lower R memory usage. 
  Thanks to Niels Richard Hansen for uncovering this. 

* Another bug fix for prediction from discrete fit bam models with an offset, 
  this time when there were more than 50000 data. Also fix to bam fitting when 
  the number of data was an integer multiple of the chunk size + 1. 
